@@ -7,9 +7,7 @@
 package de.uib.configed.core.domain.serverdata.dataservice;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -74,7 +72,7 @@ public class ProductDataService extends DataService {
 	}
 
 	public Set<String> getAllNetbootProductNames(String depotId) {
-		return getAllNetbootProductNames(Collections.singleton(depotId));
+		return getAllNetbootProductNames(Set.of(depotId));
 	}
 
 	public Set<String> getAllNetbootProductNames(Collection<String> depotIds) {
@@ -96,7 +94,7 @@ public class ProductDataService extends DataService {
 	}
 
 	public Set<String> getAllLocalbootProductNames(String depotId) {
-		return getAllLocalbootProductNames(Collections.singleton(depotId));
+		return getAllLocalbootProductNames(Set.of(depotId));
 	}
 
 	public Set<String> getAllLocalbootProductNames(Collection<String> depotIds) {
@@ -143,9 +141,9 @@ public class ProductDataService extends DataService {
 	}
 
 	public void retrieveProductsAllDepotsPD() {
-		if (dataServices.cacheManager.isDataCached(Arrays.asList(CacheIdentifier.PRODUCT_TO_VERSION_INFO_TO_DEPOTS,
-				CacheIdentifier.DEPOT_TO_LOCALBOOT_PRODUCTS, CacheIdentifier.DEPOT_TO_NETBOOT_PRODUCTS,
-				CacheIdentifier.DEPOT_TO_PACKAGES))) {
+		if (dataServices.cacheManager.isDataCached(
+				List.of(CacheIdentifier.PRODUCT_TO_VERSION_INFO_TO_DEPOTS, CacheIdentifier.DEPOT_TO_LOCALBOOT_PRODUCTS,
+						CacheIdentifier.DEPOT_TO_NETBOOT_PRODUCTS, CacheIdentifier.DEPOT_TO_PACKAGES))) {
 			return;
 		}
 
@@ -291,11 +289,6 @@ public class ProductDataService extends DataService {
 		dataServices.persistenceController.notifyPanelCompleteWinProducts();
 	}
 
-	public void retrieveProductPropertyDefinitions() {
-		dataServices.cacheManager.setCachedData(CacheIdentifier.PRODUCT_PROPERTY_DEFINITIONS,
-				getDepot2Product2PropertyDefinitionsPD().get(dataServices.depot.getDepot()));
-	}
-
 	public Map<String, Map<String, Map<String, ConfigOption>>> getDepot2Product2PropertyDefinitionsPD() {
 		retrieveAllProductPropertyDefinitionsPD();
 		return dataServices.cacheManager.getCachedData(CacheIdentifier.DEPOT_TO_PRODUCT_TO_PROPERTY_DEFINITIONS,
@@ -415,45 +408,6 @@ public class ProductDataService extends DataService {
 		dataServices.persistenceController.notifyPanelCompleteWinProducts();
 	}
 
-	private List<Map<String, Object>> getProductPropertyStates(Collection<String> clients) {
-		Logging.info(this, "retrieveProductPropertyStates for ", clients);
-		return produceProductPropertyStates(clients);
-	}
-
-	private List<Map<String, Object>> getProductPropertyDepotStates(Set<String> depots) {
-		Logging.info(this, "retrieveProductPropertyDepotStates for depots ", depots);
-		List<Map<String, Object>> productPropertyDepotStates = produceProductPropertyStates(depots);
-		Logging.info(this, "retrieveProductPropertyDepotStates ready  size ", productPropertyDepotStates.size());
-		return productPropertyDepotStates;
-	}
-
-	// client is a set of added hosts, host represents the totality and will be
-	// updated as a side effect
-	private List<Map<String, Object>> produceProductPropertyStates(final Collection<String> clients) {
-		Logging.info(this, "produceProductPropertyStates new hosts ", clients);
-		List<String> newClients = null;
-		if (clients == null) {
-			newClients = new ArrayList<>();
-		} else {
-			newClients = new ArrayList<>(clients);
-		}
-
-		List<Map<String, Object>> result = null;
-
-		if (newClients.isEmpty()) {
-			// look if propstates is initialized
-			result = new ArrayList<>();
-		} else {
-			Map<String, Object> callFilter = new HashMap<>();
-			callFilter.put("objectId", newClients);
-
-			result = dataServices.exec.getListOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_OBJECTS, new String[0],
-					callFilter);
-		}
-
-		return result;
-	}
-
 	public Map<String, Map<String, Object>> getProductGlobalInfosPD(String depotId) {
 		checkProductGlobalInfosPD(depotId);
 		return dataServices.cacheManager.getCachedData(CacheIdentifier.PRODUCT_GLOBAL_INFOS, Map.class);
@@ -468,7 +422,7 @@ public class ProductDataService extends DataService {
 
 	public void checkProductGlobalInfosPD(String depotId) {
 		if (dataServices.cacheManager
-				.isDataCached(Arrays.asList(CacheIdentifier.PRODUCT_GLOBAL_INFOS, CacheIdentifier.POSSIBLE_ACTIONS))
+				.isDataCached(List.of(CacheIdentifier.PRODUCT_GLOBAL_INFOS, CacheIdentifier.POSSIBLE_ACTIONS))
 				&& dataServices.depot.getDepot() != null && dataServices.depot.getDepot().equals(depotId)) {
 			return;
 		}
@@ -592,7 +546,7 @@ public class ProductDataService extends DataService {
 
 	public void retrieveProductIdsAndDefaultStatesPD() {
 		if (dataServices.cacheManager
-				.isDataCached(Arrays.asList(CacheIdentifier.PRODUCT_IDS, CacheIdentifier.PRODUCT_DEFAULT_STATES))) {
+				.isDataCached(List.of(CacheIdentifier.PRODUCT_IDS, CacheIdentifier.PRODUCT_DEFAULT_STATES))) {
 			return;
 		}
 
@@ -614,10 +568,10 @@ public class ProductDataService extends DataService {
 	public Map<String, ConfigName2ConfigValue> getProductPropertiesPD(String pcname) {
 		Logging.debug(this, "getProductsProperties for host ", pcname);
 
-		retrieveProductPropertiesPD(Collections.singleton(pcname));
+		retrieveProductPropertiesPD(Set.of(pcname));
 
 		Map<String, Map<String, ConfigName2ConfigValue>> productProperties = dataServices.cacheManager
-				.getCachedData(CacheIdentifier.PRODUCT_PROPERTIES, Map.class);
+				.getCachedData(CacheIdentifier.PRODUCT_PROPERTY_STATES, Map.class);
 		if (productProperties.get(pcname) == null) {
 			return new HashMap<>();
 		}
@@ -633,15 +587,38 @@ public class ProductDataService extends DataService {
 	public Map<String, Object> getProductPropertiesPD(String pcname, String productname) {
 		Logging.debug(this, "getProductProperties for product, host ", productname, ", ", pcname);
 
-		retrieveProductPropertiesPD(Collections.singleton(pcname));
+		retrieveProductPropertiesPD(Set.of(pcname));
 
 		Map<String, Map<String, ConfigName2ConfigValue>> productProperties = dataServices.cacheManager
-				.getCachedData(CacheIdentifier.PRODUCT_PROPERTIES, Map.class);
+				.getCachedData(CacheIdentifier.PRODUCT_PROPERTY_STATES, Map.class);
 		if (productProperties.get(pcname) == null || productProperties.get(pcname).get(productname) == null) {
 			return new HashMap<>();
 		}
 
 		return productProperties.get(pcname).get(productname);
+	}
+
+	public Map<String, ConfigName2ConfigValue> getProductPropertiesWithoutDefaults(List<String> objectIds,
+			List<String> productIds) {
+		Logging.info(this, "getProductPropertiesWithoutDefaults for ", objectIds);
+
+		if (objectIds == null || objectIds.isEmpty()) {
+			return new HashMap<>();
+		}
+
+		Map<String, ConfigName2ConfigValue> result = new HashMap<>();
+
+		Map<String, Map<String, Object>> retrieved = dataServices.exec
+				.getMapOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_VALUES, productIds, Set.of(), objectIds, false);
+
+		for (String objectId : objectIds) {
+			Map<String, Object> objectData = retrieved.get(objectId);
+			if (objectData != null) {
+				fillProductMapWithProductProperties(objectData, result);
+			}
+		}
+
+		return result;
 	}
 
 	/**
@@ -653,71 +630,27 @@ public class ProductDataService extends DataService {
 	 */
 	public void retrieveProductPropertiesPD(final Collection<String> clientNames) {
 		Map<String, Map<String, ConfigName2ConfigValue>> productProperties = dataServices.cacheManager
-				.getCachedData(CacheIdentifier.PRODUCT_PROPERTIES, Map.class);
+				.getCachedData(CacheIdentifier.PRODUCT_PROPERTY_STATES, Map.class);
 
 		if (productProperties != null && productProperties.keySet().containsAll(clientNames)) {
 			return;
 		}
 
-		productProperties = new HashMap<>();
-		Map<String, Map<String, Map<String, Object>>> productPropertiesRetrieved = new HashMap<>();
+		Map<String, Map<String, Object>> retrieved = dataServices.exec
+				.getMapOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_VALUES, Set.of(), Set.of(), clientNames, true);
 
-		List<Map<String, Object>> retrieved = getProductPropertyStates(clientNames);
-		Set<String> productsWithProductPropertyStates = new HashSet<>();
+		// These values always need to be of type ConfigName2ConfigValue, so we transform them here.
+		retrieved.values().forEach(map -> map.entrySet()
+				.forEach(entry -> entry.setValue(new ConfigName2ConfigValue(POJOReMapper.remap(entry.getValue())))));
 
-		for (Map<String, Object> map : retrieved) {
-			String host = (String) map.get("objectId");
-
-			productsWithProductPropertyStates.add((String) map.get("productId"));
-
-			Map<String, Map<String, Object>> productproperties1Client = productPropertiesRetrieved.computeIfAbsent(host,
-					s -> new HashMap<>());
-
-			Map<String, Object> properties = productproperties1Client.computeIfAbsent((String) map.get("productId"),
-					s -> new HashMap<>());
-
-			properties.put((String) map.get("propertyId"), POJOReMapper.remap(map.get("values")));
-		}
-
-		Logging.info(this, " retrieveProductproperties  productsWithProductPropertyStates ",
-				productsWithProductPropertyStates);
-
-		Map<String, ConfigName2ConfigValue> defaultProperties = getDefaultProductPropertiesPD(
-				dataServices.depot.getDepot());
-
-		Map<String, Map<String, Object>> defaultPropertiesRetrieved = new HashMap<>(defaultProperties);
-
-		Set<String> products = defaultPropertiesRetrieved.keySet();
-
-		for (String host : clientNames) {
-			Map<String, ConfigName2ConfigValue> productproperties1Client = new HashMap<>();
-			productProperties.put(host, productproperties1Client);
-
-			Map<String, Map<String, Object>> retrievedProperties = productPropertiesRetrieved.get(host);
-			if (retrievedProperties == null) {
-				retrievedProperties = defaultPropertiesRetrieved;
-			}
-
-			for (String product : products) {
-				Map<String, Object> retrievedProperties1Product = retrievedProperties.get(product);
-				// complete set of default values
-				Map<String, Object> properties1Product = new HashMap<>(defaultPropertiesRetrieved.get(product));
-
-				if (retrievedProperties1Product != null) {
-					properties1Product.putAll(retrievedProperties1Product);
-				}
-
-				ConfigName2ConfigValue state = new ConfigName2ConfigValue(properties1Product);
-				productproperties1Client.put(product, state);
-			}
-		}
-
-		dataServices.cacheManager.setCachedData(CacheIdentifier.PRODUCT_PROPERTIES, productProperties);
+		dataServices.cacheManager.setCachedData(CacheIdentifier.PRODUCT_PROPERTY_STATES, retrieved);
 
 		Map<String, ConfigName2ConfigValue> depotValues = getDefaultProductPropertiesPD(dataServices.depot.getDepot());
+		Map<String, Map<String, Object>> defaultPropertiesRetrieved = new HashMap<>(depotValues);
+		Set<String> products = defaultPropertiesRetrieved.keySet();
 
-		Map<String, Map<String, ConfigOption>> productPropertyDefinitions = dataServices.cacheManager
-				.getCachedData(CacheIdentifier.PRODUCT_PROPERTY_DEFINITIONS, Map.class);
+		Map<String, Map<String, ConfigOption>> productPropertyDefinitions = getDepot2Product2PropertyDefinitionsPD()
+				.get(dataServices.depot.getDepot());
 
 		for (String product : products) {
 			setDefaultValuesForProduct(productPropertyDefinitions, depotValues, product);
@@ -771,57 +704,67 @@ public class ProductDataService extends DataService {
 
 		Logging.info(this, "retrieveDepotProductProperties, build depot2product2properties");
 
-		Map<String, Map<String, ConfigName2ConfigValue>> depot2product2properties = new HashMap<>();
-		List<Map<String, Object>> retrieved = getProductPropertyDepotStates(
-				dataServices.hostInfoCollections.getDepots().keySet());
+		Map<String, Map<String, ConfigName2ConfigValue>> depot2Product2Properties = new HashMap<>();
+		Set<String> depotHosts = dataServices.hostInfoCollections.getDepots().keySet();
+		Map<String, Map<String, Object>> retrieved = dataServices.exec
+				.getMapOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_VALUES, Set.of(), Set.of(), depotHosts, true);
 
-		for (Map<String, Object> map : retrieved) {
-			String host = (String) map.get("objectId");
+		for (Entry<String, Map<String, Object>> depotEntry : retrieved.entrySet()) {
+			String host = depotEntry.getKey();
 
-			if (!dataServices.hostInfoCollections.getDepots().keySet().contains(host)) {
+			if (!depotHosts.contains(host)) {
 				Logging.warning(this, "should be a productPropertyState for a depot, but host ", host);
 				continue;
 			}
 
-			Map<String, ConfigName2ConfigValue> productproperties1Host = depot2product2properties.computeIfAbsent(host,
+			Map<String, ConfigName2ConfigValue> productMap = depot2Product2Properties.computeIfAbsent(host,
 					arg -> new HashMap<>());
-
-			ConfigName2ConfigValue properties = productproperties1Host.computeIfAbsent(
-					(String) map.get(OpsiPackage.DB_KEY_PRODUCT_ID),
-					arg -> new ConfigName2ConfigValue(new HashMap<>()));
-
-			properties.put((String) map.get("propertyId"), map.get("values"));
-			properties.getRetrieved().put((String) map.get("propertyId"), map.get("values"));
-
-			Logging.debug(this, "retrieveDepotProductProperties product properties ",
-					map.get(OpsiPackage.DB_KEY_PRODUCT_ID));
+			fillProductMapWithProductProperties(depotEntry.getValue(), productMap);
 		}
 
 		dataServices.cacheManager.setCachedData(CacheIdentifier.DEPOT_TO_PRODUCT_TO_PROPERTIES,
-				depot2product2properties);
+				depot2Product2Properties);
+	}
+
+	private void fillProductMapWithProductProperties(Map<String, Object> products,
+			Map<String, ConfigName2ConfigValue> productMap) {
+		for (Entry<String, Object> productEntry : products.entrySet()) {
+			String productId = productEntry.getKey();
+			Map<String, Object> properties = (Map<String, Object>) productEntry.getValue();
+
+			ConfigName2ConfigValue config = productMap.computeIfAbsent(productId,
+					id -> new ConfigName2ConfigValue(new HashMap<>()));
+
+			properties.forEach((String key, Object value) -> {
+				config.put(key, value);
+				config.getRetrieved().put(key, value);
+			});
+
+			Logging.debug(this, "retrieveDepotProductProperties product properties ", productId);
+		}
 	}
 
 	/**
 	 * Collects the common property values of some product for a client
 	 * collection; Needed for local imaging handling.
 	 *
-	 * @param clients  collection of clients
-	 * @param product  for which to collect property values
-	 * @param property from which to collect values
+	 * @param clients    collection of clients
+	 * @param productId  for which to collect property values
+	 * @param propertyId from which to collect values
 	 */
-	public List<String> getCommonProductPropertyValues(Collection<String> clients, String product, String property) {
-		Logging.info(this, "getCommonProductPropertyValues for product, property, clients ", product, ", ", property,
-				"  -- ", clients);
-		Map<String, Object> callFilter = new HashMap<>();
-		callFilter.put("objectId", clients);
-		callFilter.put("productId", product);
-		callFilter.put("propertyId", property);
-		List<Map<String, Object>> properties = dataServices.exec
-				.getListOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_OBJECTS, new String[0], callFilter);
+	public List<String> getCommonProductPropertyValues(Collection<String> clients, String productId,
+			String propertyId) {
+		Logging.info(this, "getCommonProductPropertyValues for product, property, clients ", productId, ", ",
+				propertyId, "  -- ", clients);
+		Set<String> productIds = Set.of(productId);
+		Set<String> propertyIds = Set.of(propertyId);
+		Map<String, Map<String, Object>> properties = dataServices.exec
+				.getMapOfMaps(RPCMethodName.PRODUCT_PROPERTY_STATE_GET_VALUES, productIds, propertyIds, clients, false);
 		Set<String> resultSet = new HashSet<>();
 		boolean starting = true;
-		for (Map<String, Object> map : properties) {
-			List<?> valueList = (List<?>) map.get("values");
+		for (Map<String, Object> val : properties.values()) {
+			Map<String, Object> property = (Map<String, Object>) val.get(productId);
+			List<?> valueList = (List<?>) property.get(propertyId);
 			Set<String> values = new HashSet<>();
 			for (Object value : valueList) {
 				values.add((String) value);
@@ -1022,9 +965,7 @@ public class ProductDataService extends DataService {
 	}
 
 	private List<Map<String, Object>> retrieveModifiedProductsOnClients(List<String> clientIds, String productType) {
-		Map<String, Object> callFilter = new HashMap<>();
-		callFilter.put("clientId", clientIds);
-		callFilter.put("productType", productType);
+		Map<String, Object> callFilter = Map.of("clientId", clientIds, "productType", productType);
 
 		return dataServices.exec.getListOfMaps(RPCMethodName.PRODUCT_ON_CLIENT_GET_OBJECTS, new String[0], callFilter);
 	}
@@ -1215,11 +1156,10 @@ public class ProductDataService extends DataService {
 	}
 
 	public Map<String, ConfigOption> getProductPropertyOptionsMap(String productId) {
-		retrieveProductPropertyDefinitions();
-		Map<String, ConfigOption> result;
+		Map<String, Map<String, ConfigOption>> productPropertyDefinitions = getDepot2Product2PropertyDefinitionsPD()
+				.get(dataServices.depot.getDepot());
 
-		Map<String, Map<String, ConfigOption>> productPropertyDefinitions = dataServices.cacheManager
-				.getCachedData(CacheIdentifier.PRODUCT_PROPERTY_DEFINITIONS, Map.class);
+		Map<String, ConfigOption> result;
 		if (productPropertyDefinitions == null) {
 			result = new HashMap<>();
 		} else {
